--- a/as3snapi-sandbox/src/SandboxMain.mxml
+++ b/as3snapi-sandbox/src/SandboxMain.mxml
@@ -4,13 +4,27 @@
                xmlns:containers="mx.containers.*"
                xmlns:ui="ui.*"
                creationComplete="creationCompleteHandler(event)">
-    <ui:MainPanel width="100%" height="100%"/>
+    <s:VGroup width="100%" height="100%">
+        <s:HGroup width="100%">
+            <s:Button label="Settings" click="button1_clickHandler(event)"/>
+        </s:HGroup>
+        <ui:MainPanel width="100%" height="100%"/>
+    </s:VGroup>
 
     <fx:Script><![CDATA[
         import mx.events.FlexEvent;
+        import mx.managers.PopUpManager;
+
+        import ui.PropsDlg;
 
         private function creationCompleteHandler(event:FlexEvent):void {
 
+        }
+
+        private function button1_clickHandler(event:MouseEvent):void {
+            var propsDlg:PropsDlg = new PropsDlg();
+            PopUpManager.addPopUp(propsDlg, this, true);
+            PopUpManager.centerPopUp(propsDlg);
         }
         ]]></fx:Script>
 </s:Application>
