--- a/as3snapi-sandbox/src/SandboxMain.mxml
+++ b/as3snapi-sandbox/src/SandboxMain.mxml
@@ -1,15 +1,14 @@
 <?xml version="1.0"?>
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009"
-               xmlns:s="library://ns.adobe.com/flex/spark"
-               xmlns:containers="mx.containers.*"
-               xmlns:ui="sandbox.ui.*"
-               creationComplete="creationCompleteHandler(event)">
+        xmlns:s="library://ns.adobe.com/flex/spark"
+        xmlns:ui="sandbox.ui.*"
+        creationComplete="creationCompleteHandler(event)">
     <s:VGroup width="100%" height="100%">
-        <s:HGroup width="100%">
-            <s:Button label="Settings" click="button1_clickHandler(event)"/>
-            <s:Button label="Capture mock snapshot" click="button2_clickHandler(event)"/>
+        <s:HGroup width="100%" chromeColor="green" color="white">
+            <s:Button label="Settings" click="button1_clickHandler(event)" />
+            <s:Button label="Capture mock snapshot" click="button2_clickHandler(event)" />
         </s:HGroup>
-        <ui:MainPanel id="mainPanel" width="100%" height="100%"/>
+        <ui:MainPanel id="mainPanel" width="100%" height="100%" />
     </s:VGroup>
 
     <fx:Script><![CDATA[
